# Ukrainian-NPPs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  app.py  main.py
app/app/: app.py
app/core/: users.py
app/db/: base.py  db.py  models.py
app/routers/: app.py  users.py
common/: client.py  translate_text.py  utils.py
docker/: Dockerfile  docker-compose.yaml
notebook/: research.ipynb
src/: client.py  utils.py
tests/: test_client.py
tests/unit/: test_client.py  test_data_format.py  test_translate_text.py
