[project]
name = "ukrainian-npps"
version = "0.1.0"
description = "Analysis and interactive visualization of radioactive emissions from Ukrainian nuclear power plants using open government data."
authors = [
    {name = "andrii buha",email = "bugandreij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[tool.poetry]
packages = [
    { include = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
